force-app/main/default/objects/Location/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Text</type>
    <length>40</length>
    
</CustomField>