force-app/main/default/objects/Location/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Text</type>
    <length>80</length>
    
</CustomField>