force-app/main/default/objects/Location/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ManagedLocations</relationshipName>
</CustomField>