force-app/main/default/objects/Location/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>Postal Code</label>
    <type>Text</type>
    <length>20</length>
    
</CustomField>