force-app/main/default/objects/Location/fields/ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerritory__c</fullName>
    <label>Service Territory</label>
    <type>Lookup</type>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipName>Locations</relationshipName>
</CustomField>