force-app/main/default/objects/Location/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Text</type>
    <length>80</length>
    
</CustomField>